# farmchat-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: api_base.py  kma_client.py  niast_client.py
main/: app.py  app_250527.py  config.py  generate_gpt_response.py  utils.py
models/: parcel.py  response.py
